aplicacion de css para manejar es desbordamiento de la tabla

--- a/src/app/components/enfermeria/citas-programadas/citas-programadas.component.html
+++ b/src/app/components/enfermeria/citas-programadas/citas-programadas.component.html
@@ -58,8 +58,10 @@
     </div>
     <div class="p-4">
       @if (citasDelDia().length > 0) {
-      <app-tabla-citas [citas]="citasDelDia()" (onTriaje)="abrirModalTriaje($event)"
+      <div class="tabla-container">
+        <app-tabla-citas [citas]="citasDelDia()" (onTriaje)="abrirModalTriaje($event)"
         (onHistorial)="abrirModalHistorial($event)" (onDetalles)="abrirModalDetalles($event)" />
+      </div>
       } @else {
       <p class="text-center py-6 text-gray-500">
         No hay citas programadas para este día.
