se hizo que solo el footer aparesca en el index general

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,6 @@
   <router-outlet></router-outlet>
 </section>
 
-<!-- Chat-bot y footer globales -->
+<!-- Chat-bot globales -->
 <app-chat-bot *ngIf="currentRoute() === '/'"></app-chat-bot>
-<app-footer></app-footer>
 
